--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -247,5 +247,43 @@
   "private_share_receive_address": "Receive Address : ${shortAddress}",
   "navigation": "Start",
   "my_location": "My Location",
-  "my_position": "My Location"
+  "my_position": "My Location",
+  "get_powers": "Get Powers",
+  "node_martgage": "Node Martgage",
+  "available_mortgage_numbers": "mort：${number}",
+  "commiting": "Commiting",
+  "mortgage": "Mortgage",
+  "free_receive": "Free Receive",
+  "introduce": "Introduce",
+  "receive_success_hint": "Receive Success",
+  "over_limit_numbers": "Excess Quantity",
+  "mortgage_fail_hint": "Mortgage Failure",
+  "n_days_product": "${days} days to produce",
+  "power_martgage": "Powers Martgage",
+  "product": "Product：",
+  "amount": "Amount：",
+  "amount_copy_success_hint": "Amount copied successfully",
+  "please_mortgage": "Please mortgage",
+  "becharge_amount": "Becharge",
+  "income_amount": "Income",
+  "by_hyn": "Using HYN",
+  "by_mortgage": "Alternative mortgage",
+  "transfer_hyn_hint": "Be sure to transfer the specified HYN amount！",
+  "address_copy_success_hint": "Address replication successful",
+  "transfer_address": "Transfer address",
+  "by_hyn_transfer": "Transfer using HYN wallet",
+  "hyn_wallet_open_hint": "HYN wallet is about to open",
+  "pay_success_hint": "payment successful",
+  "over_limit_amount_hint": "Reached the limit",
+  "no_transfer_info_hint": "No transfer information found, please try again later",
+  "out_wallet_transfer_hint": "I have transferred using an external wallet",
+  "action_success_hint": "Successful operation",
+  "pay_fail_hint": "Payment failed",
+  "transfer_exception_hint": "Transfer exception",
+  "data_exception_hint": "Data is abnormal, please try again",
+  "confirm_mortgage": "Confirm mortgage",
+  "balance_lack": "Insufficient balance",
+  "click_charge": "Click to recharge",
+  "available_balance_usdt": "Available Balance ${amount} USDT",
+  "current_rate_func": "current ${currency} exchange ${quotes} rate is: 1${rate}"
 }
