--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -247,5 +247,43 @@
   "private_share_receive_address": "수신 주소:${shortAddress}",
   "navigation": "탐색",
   "my_location": "내 위치",
-  "my_position": "내 위치"
+  "my_position": "내 위치",
+  "get_powers": "获取算力",
+  "node_martgage": "节点抵押",
+  "available_mortgage_numbers": "可抵${number}份",
+  "commiting": "提交中",
+  "mortgage": "抵押",
+  "free_receive": "免费领取",
+  "introduce": "介绍",
+  "receive_success_hint": "领取成功",
+  "over_limit_numbers": "超过限制数量",
+  "mortgage_fail_hint": "抵押失败",
+  "n_days_product": "${days}天产出",
+  "power_martgage": "算力抵押",
+  "product": "产品：",
+  "amount": "金额：",
+  "amount_copy_success_hint": "金额复制成功",
+  "please_mortgage": "请抵押",
+  "becharge_amount": "充值余额",
+  "income_amount": "收益余额",
+  "by_hyn": "使用HYN",
+  "by_mortgage": "选择抵押方式",
+  "transfer_hyn_hint": "请务必转入指定的HYN金额！",
+  "address_copy_success_hint": "地址复制成功",
+  "transfer_address": "转入地址",
+  "by_hyn_transfer": "使用HYN钱包转入",
+  "hyn_wallet_open_hint": "HYN钱包即将开放",
+  "pay_success_hint": "支付成功",
+  "over_limit_amount_hint": "已到达上限",
+  "no_transfer_info_hint": "暂未发现转入信息，请稍后再试",
+  "out_wallet_transfer_hint": "我已使用外部钱包转入",
+  "action_success_hint": "操作成功",
+  "pay_fail_hint": "支付失败",
+  "transfer_exception_hint": "转入异常",
+  "data_exception_hint": "数据异常，请重试",
+  "confirm_mortgage": "确认抵押",
+  "balance_lack": "余额不足",
+  "click_charge": "点击充值",
+  "available_balance_usdt": "可用余额 ${amount} USDT",
+  "current_rate_func": "当前 ${currency} 兑换 ${quotes} 的汇率为: 1${rate}"
 }
