--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -338,5 +338,26 @@
   "no_wallet_hint": "You don't have a wallet yet.",
   "create": "Create",
   "recharge_success_hint": "Recharge successful",
-  "transfer_warning_hint": "Do not transfer non-HYN assets to the above address, otherwise the assets will not be recovered. After you transfer in, you need to confirm the entire network node, which takes about 10-30 minutes"
+  "transfer_warning_hint": "Do not transfer non-HYN assets to the above address, otherwise the assets will not be recovered. After you transfer in, you need to confirm the entire network node, which takes about 10-30 minutes",
+  "task_finish_day_hint": "Task completed for the day",
+  "task_finish_func": "Already done the task ${total} time",
+  "time_f": "time:",
+  "load_fail_click_hint": "Loading failed, click to retry",
+  "the_horizon_hint": "—— This is the horizon ——",
+  "click_retry_hint": "Click to retry",
+  "network_exception_hint": "Network anomaly~",
+  "star_number": "Stars",
+  "direct_star_numbers": "Direct",
+  "max_star_numbers": "Maximum",
+  "other_star_numbers": "Other",
+  "by_recommend": "Recommended by ${getParentEmail}",
+  "invite_link_copy_hint": "Invitation link copied",
+  "invite_link": "Invitation link",
+  "no_invite_success_hint": "You haven't successfully invited people~",
+  "invitate_qr": "Invite QR",
+  "invite_join": "Invite you to join",
+  "check_update": "Check for updates",
+  "contact_customer_service": "Contact Customer Service",
+  "already_latest_version_hint": "Already the latest version",
+  "wx_id": "WeChat ID：titan5321"
 }
