--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -338,5 +338,26 @@
   "no_wallet_hint": "你还没有钱包.",
   "create": "创建",
   "recharge_success_hint": "充值成功",
-  "transfer_warning_hint": "勿往上述地址转入非HYN资产，否则资产将不可找回。您转入后，需要整个网络节点的确认，大约需要10-30分钟。"
+  "transfer_warning_hint": "勿往上述地址转入非HYN资产，否则资产将不可找回。您转入后，需要整个网络节点的确认，大约需要10-30分钟。",
+  "task_finish_day_hint": "当天任务已完成",
+  "task_finish_func": "已做任务${total}次",
+  "time_f": "时间:",
+  "load_fail_click_hint": "加载失败，点击重试",
+  "the_horizon_hint": "—— 这是地平线了 ——",
+  "click_retry_hint": "点击重试",
+  "network_exception_hint": "网络异常~",
+  "star_number": "星际数",
+  "direct_star_numbers": "直连星际量",
+  "max_star_numbers": "最大星际量",
+  "other_star_numbers": "其他星际量",
+  "by_recommend": "推荐人 ${getParentEmail}",
+  "invite_link_copy_hint": "邀请链接已复制",
+  "invite_link": "邀请链接",
+  "no_invite_success_hint": "你还没成功邀请人~",
+  "invitate_qr": "邀请二维码",
+  "invite_join": "邀请你加入",
+  "check_update": "检查更新",
+  "contact_customer_service": "联系客服",
+  "already_latest_version_hint": "已经是最新版本",
+  "wx_id": "微信ID：titan5321"
 }
