[Add] add mortgage

--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -359,5 +359,29 @@
   "check_update": "Check for updates",
   "contact_customer_service": "Contact Customer Service",
   "already_latest_version_hint": "Already the latest version",
-  "wx_id": "WeChat ID：titan5321"
+  "wx_id": "WeChat ID：titan654321",
+  "copy_wx_id_success_hint": "Copying WeChat success",
+  "sweep_qr_hint": "Sweep the QR code pattern above, add me on WeChat",
+  "node_mortgage_in_out_hint": "Node mortgages, go in and out, unlimited time。",
+  "node_has_squat_hint": "Node has been squatted out",
+  "node_introduction": "Node introduction",
+  "cybersquatting": "Squat",
+  "stay_func": " stay ${snapUpStocks}",
+  "income_func": "${incomeCycle} day income",
+  "mortgage_product_func": "Mortgage products：${name}",
+  "Insufficient_balance_hint": "Insufficient balance available for collateral",
+  "mortgage_success_hint": "Mortgage success",
+  "tip_node_mortgages_balances_hint": "Tip: node mortgages can only be used with earnings balances",
+  "snap_up": "Snap Up",
+  "snap_up_product_fuc": "Snap Up Products：${name}",
+  "need_transfer": "Need Transfer",
+  "snap_up_success_hint": "Snap up success",
+  "snap_up_fail": "Snap up failure",
+  "confirm_snap_up": "Confirm",
+  "tip_snap_up_balance_hint": "Tip: The cybersquatting node can only use the recharge balance for collateral",
+  "map_ai_verificate": "Map AI verification",
+  "turn_on_wifi_hint": "Turn on WiFi to scan more accurate signal maps",
+  "all_powers_func": "Total Power：${totalPower}",
+  "background_scan": "Background scan",
+  "max_range_func": "Maximum range：${maxMeter} m"
 }
