--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -417,5 +417,15 @@
   "redemption_success": "赎回成功",
   "redemption_fail": "赎回出错",
   "mortgage_time": "抵押时间：${time}",
-  "mortgage_id": "抵押ID：${id}"
+  "mortgage_id": "抵押ID：${id}",
+  "personal_information": "个人信息",
+  "modify_account_password": "修改账户密码",
+  "modify_fund_password": "修改资金密码",
+  "login_out": "登出",
+  "reset_fund_password": "重置资金密码",
+  "please_input_account_password": "请输入账户密码",
+  "fund_new_password": "资金新密码",
+  "confirm_new_fund_password": "确认资金新密码",
+  "fund_password_not_equal_confirm_fund_password": "资金密码与确认资金密码不一致",
+  "re_enter_fund_password": "请再次输入资金密码"
 }
