--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -424,5 +424,9 @@
   "no_grade": "无等级",
   "contribute_reward_func": "贡献奖励： ${award}",
   "grade_require_func": "等级要求： ${require}",
-  "revenue_details": "收益详情"
+  "revenue_details": "收益详情",
+  "city_recommendation": "城市推荐",
+  "search_exception": "搜索异常",
+  "ciphertext_exception_hint": "密文无效或已过期",
+  "not_valid_public_key": "不是合法的公钥"
 }
