add ko translate

--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -1,6 +1,6 @@
 {
   "app_name": "타이탄",
-  "network_request_err": "网络请求错误,状态码: $code",
+  "network_request_err": "네트워크 요청 오류, 상태 코드: $code",
   "route": "노선",
   "no_recommended_route": "추천 경로가 없습니다",
   "less_than_1_min": "일분 미만",
@@ -248,191 +248,190 @@
   "navigation": "탐색",
   "my_location": "내 위치",
   "my_position": "내 위치",
-  "get_powers": "获取算力",
-  "node_martgage": "节点抵押",
-  "available_mortgage_numbers": "可抵${number}份",
-  "commiting": "提交中",
-  "mortgage": "抵押",
-  "free_receive": "免费领取",
-  "introduce": "介绍",
-  "receive_success_hint": "领取成功",
-  "over_limit_numbers": "超过限制数量",
-  "mortgage_fail_hint": "抵押失败",
-  "n_days_product": "${days}天产出",
-  "power_martgage": "算力抵押",
-  "product": "产品：",
-  "amount": "金额：",
-  "amount_copy_success_hint": "金额复制成功",
-  "please_mortgage": "请抵押",
-  "becharge_amount": "充值余额",
-  "income_amount": "收益余额",
-  "by_hyn": "使用HYN",
-  "by_mortgage": "选择抵押方式",
-  "transfer_hyn_hint": "请务必转入指定的HYN金额！",
-  "address_copy_success_hint": "地址复制成功",
-  "transfer_address": "转入地址",
-  "by_hyn_transfer": "使用HYN钱包转入",
-  "hyn_wallet_open_hint": "HYN钱包即将开放",
-  "pay_success_hint": "支付成功",
-  "over_limit_amount_hint": "已到达上限",
-  "no_transfer_info_hint": "暂未发现转入信息，请稍后再试",
-  "out_wallet_transfer_hint": "我已使用外部钱包转入",
-  "action_success_hint": "操作成功",
-  "pay_fail_hint": "支付失败",
-  "transfer_exception_hint": "转入异常",
-  "data_exception_hint": "数据异常，请重试",
-  "confirm_mortgage": "确认抵押",
-  "balance_lack": "余额不足",
-  "click_charge": "点击充值",
-  "available_balance_usdt": "可用余额 ${amount} USDT",
-  "current_rate_func": "当前 ${currency} 兑换 ${quotes} 的汇率为: 1${rate}",
-  "logining": "登录中",
-  "login": "登录",
-  "email_label": "邮箱",
-  "email_format_error_hint": "邮箱格式有误，请输入正确的邮箱",
-  "please_input_email_hint": "请输入邮箱",
-  "password_label": "密码",
-  "password_format_error_message": "密码格式有误，请输入最少6位",
-  "please_input_password_hint": "请输入密码",
-  "forget_password": "忘记密码",
-  "register_account": "注册账号",
-  "processing": "处理中",
-  "submit": "提交",
-  "modify_success": "修改成功",
-  "reset_account_password": "重置账户密码",
-  "verification_code": "验证码",
-  "please_input_verification_code": "请输入6位验证码",
-  "get_verification_code_again": "重新获取 ${countdownTime}",
-  "send_verification_code": "发送验证码",
-  "account_new_password": "账户新密码",
-  "password_length_error_message": "请输入至少6位的密码",
-  "confirm_password_label": "确认新密码",
-  "register": "注册",
-  "register_success": "注册成功",
-  "register_email": "注册邮箱",
-  "invitation_code": "邀请码",
-  "please_input_invitation_code": "请输入6位邀请码",
-  "account_password": "账户密码",
-  "fundz_password": "资金安全密码",
-  "fund_password_format_error_message": "密码格式有误，请输入最少6位",
-  "fund_password_length_error_message": "请输入至少6位的资金密码",
-  "no_level": "无等级",
-  "task": "任务",
-  "my_account_with_unit": "我的账户(USDT)",
-  "my_power_with_unit": "我的算力(T)",
-  "node_mortgage_with_unit": "节点抵押(USDT)",
-  "get_power": "获取算力",
-  "node_mortgage": "节点抵押",
-  "task_record": "任务记录",
-  "invite_share": "邀请分享",
-  "use_guide": "使用教程",
-  "dmap_setting": "DMap设置",
-  "thank_you_for_contribute_data": "感谢你贡献数据。",
-  "safety_verify": "安全验证",
-  "fund_password": "资金密码",
-  "please_input_fund_pwd_hint": "请输入资金密码",
-  "recharge": "充值",
-  "fail_get_user_recharge_address_hint": "获取用户充值地址失败",
-  "current_exchange_rate": "当前 ${to} 兑换 ${currency} 的比例为",
-  "Tips": "提示",
-  "no_wallet_hint": "你还没有钱包.",
-  "create": "创建",
-  "recharge_success_hint": "充值成功",
-  "transfer_warning_hint": "勿往上述地址转入非HYN资产，否则资产将不可找回。您转入后，需要整个网络节点的确认，大约需要10-30分钟。",
-  "task_finish_day_hint": "当天任务已完成",
-  "task_finish_func": "已做任务${total}次",
-  "time_f": "时间:",
-  "load_fail_click_hint": "加载失败，点击重试",
-  "the_horizon_hint": "—— 这是地平线了 ——",
-  "click_retry_hint": "点击重试",
-  "network_exception_hint": "网络异常~",
-  "star_number": "星际数",
-  "direct_star_numbers": "直连星际量",
-  "max_star_numbers": "最大星际量",
-  "other_star_numbers": "其他星际量",
-  "by_recommend": "推荐人 ${getParentEmail}",
-  "invite_link_copy_hint": "邀请链接已复制",
-  "invite_link": "邀请链接",
-  "no_invite_success_hint": "你还没成功邀请人~",
-  "invitate_qr": "邀请二维码",
-  "invite_join": "邀请你加入",
-  "check_update": "检查更新",
-  "contact_customer_service": "联系客服",
-  "already_latest_version_hint": "已经是最新版本",
-  "wx_id": "微信ID：titan654321",
-  "copy_wx_id_success_hint": "复制微信号成功",
-  "sweep_qr_hint": "扫一扫上面的二维码图案，加我微信",
-  "node_mortgage_in_out_hint": "节点抵押，随进随出，不限时间。",
-  "node_has_squat_hint": "节点已抢注完",
-  "node_introduction": "节点介绍",
-  "cybersquatting": "抢注",
-  "stay_func": "剩余 ${snapUpStocks}",
-  "income_func": "${incomeCycle}天收益",
-  "mortgage_product_func": "抵押产品：${name}",
-  "Insufficient_balance_hint": "可用于抵押的余额不足",
-  "mortgage_success_hint": "抵押成功",
-  "tip_node_mortgages_balances_hint": "提示：只能使用收益余额进行节点抵押",
-  "snap_up": "抢注",
-  "snap_up_product_fuc": "抢注产品：${name}",
-  "need_transfer": "需转入",
-  "snap_up_success_hint": "抢注成功",
-  "snap_up_fail": "抢注失败",
-  "confirm_snap_up": "确认抢注",
-  "tip_snap_up_balance_hint": "提示：抢注节点只能使用充值余额进行抵押",
-  "map_ai_verificate": "地图AI校验",
-  "turn_on_wifi_hint": "打开WiFi扫描更精准的信号地图",
-  "all_powers_func": "总算力：${totalPower}",
-  "background_scan": "后台扫描",
-  "max_range_func": "最大范围约：${maxMeter} 米"
-  "wx_id": "微信ID：titan5321",
-  "withdrawal": "提币",
-  "balance_with_unit": "账户余额(USDT)",
-  "earnings_balance": "收益余额",
-  "recharge_balance": "充值余额",
-  "bill_flow": "账单流水",
-  "withdrawal_records": "提币记录",
-  "withdrawal_with_quantity": "提币：${count}",
-  "poundage_with_quantity": "手续费：${poundage}",
-  "max_withdrawal_quantity": "最多可提 ${maxWithdrawal} USDT",
-  "hyn_withdrawal_coin_address": "HYN提币地址",
-  "my_wallet_address": "我的钱包地址",
-  "please_input_hyn_address": "请输入HYN地址",
-  "no_eth_address": "非以太坊地址",
-  "quantity": "数量",
-  "please_input_withdrawal_quantity": "请输入提币数量",
-  "withdrawal_fee": "手续费(${fee}%)",
-  "amount_received": "到账数量",
-  "withdrawal_audit_message": "将换算成相应的HYN到你的提币地址上。为保障资金安全，我们会对提币进行人工审核。提币处理时间：早9:00点-晚21:00点当天到账，非工作时间收到的订单将在第二天到账。",
-  "over_max_withdrawal": "超出最大提币额度",
-  "below_min_withdrawal": "低于最小提币额度",
-  "please_input_hyn_withdrawal_address": "请输入HYN提币地址",
-  "withdrawal_apply_success": "提币申请成功",
-  "withdrawal_fail": "提币出错",
-  "without_hyn_wallet": "你还没有钱包.",
-  "my_total_power": "我的总算力",
-  "effective": "有效",
-  "finished": "已结束",
-  "my_node_mortgage": "我的节点抵押",
-  "redemption_mortgage": "赎回抵押",
-  "redemption_success": "赎回成功",
-  "redemption_fail": "赎回出错",
-  "mortgage_time": "抵押时间：${time}",
-  "mortgage_id": "抵押ID：${id}",
-  "personal_information": "个人信息",
-  "modify_account_password": "修改账户密码",
-  "modify_fund_password": "修改资金密码",
-  "login_out": "登出",
-  "reset_fund_password": "重置资金密码",
-  "please_input_account_password": "请输入账户密码",
-  "fund_new_password": "资金新密码",
-  "confirm_new_fund_password": "确认资金新密码",
-  "fund_password_not_equal_confirm_fund_password": "资金密码与确认资金密码不一致",
-  "re_enter_fund_password": "请再次输入资金密码",
-  "total_invitation_func": "已邀请${totalInvitations}人",
-  "grade": "等级",
-  "current_grade": "当前等级",
-  "no_grade": "无等级",
-  "contribute_reward_func": "贡献奖励： ${award}",
-  "grade_require_func": "等级要求： ${require}",
-  "revenue_details": "收益详情"
+  "get_powers": "컴퓨팅 파워 확보",
+  "node_martgage": "노드 모기지",
+  "available_mortgage_numbers": "${number}이용 가능한 사본",
+  "commiting": "제출",
+  "mortgage": "모기지",
+  "free_receive": "무료 픽업",
+  "introduce": "소개",
+  "receive_success_hint": "클레임 성공",
+  "over_limit_numbers": "한도 초과",
+  "mortgage_fail_hint": "모기지 실패",
+  "n_days_product": "${days}일 출력",
+  "power_martgage": "해시",
+  "product": "제품：",
+  "amount": "금액：",
+  "amount_copy_success_hint": "금액이 성공적으로 복사되었습니다",
+  "please_mortgage": "담보 대출",
+  "becharge_amount": "충전 잔액",
+  "income_amount": "수입 잔액",
+  "by_hyn": "사용하려면HYN",
+  "by_mortgage": "모기지 방법 선택",
+  "transfer_hyn_hint": "지정된 금액을 양도하십시오!",
+  "address_copy_success_hint": "주소가 성공적으로 복사되었습니다",
+  "transfer_address": "전송 주소",
+  "by_hyn_transfer": "지갑을 사용하여 전송",
+  "hyn_wallet_open_hint": "HYN월렛이 열려고합니다",
+  "pay_success_hint": "결제 성공",
+  "over_limit_amount_hint": "한도에 도달",
+  "no_transfer_info_hint": "전송 정보가 없습니다. 나중에 다시 시도하십시오",
+  "out_wallet_transfer_hint": "외부 지갑을 사용하여 이체했습니다",
+  "action_success_hint": "작업 성공",
+  "pay_fail_hint": "결제 실패",
+  "transfer_exception_hint": "예외로 바꾸다",
+  "data_exception_hint": "데이터가 비정상입니다. 다시 시도하십시오",
+  "confirm_mortgage": "담보 대출 확인",
+  "balance_lack": "잔액 부족",
+  "click_charge": "충전하려면 클릭",
+  "available_balance_usdt": "사용 가능한 잔액 ${amount} USDT",
+  "current_rate_func": "현재 ${currency} 환율 ${quotes} 은: 1${rate}",
+  "logining": "로그인",
+  "login": "로그인",
+  "email_label": "우편함",
+  "email_format_error_hint": "이메일 형식이 잘못되었습니다. 올바른 이메일을 입력하십시오",
+  "please_input_email_hint": "이메일을 입력 해주세요",
+  "password_label": "비밀번호",
+  "password_format_error_message": "비밀번호 형식이 잘못되었습니다. 최소 자릿수를 입력하십시오",
+  "please_input_password_hint": "비밀번호를 입력하십시오",
+  "forget_password": "비밀번호를 잊어 버렸습니다",
+  "register_account": "계정 등록",
+  "processing": "가공",
+  "submit": "제출",
+  "modify_success": "성공적으로 수정되었습니다",
+  "reset_account_password": "계정 비밀번호 재설정",
+  "verification_code": "인증 코드",
+  "please_input_verification_code": "인증 코드를 입력하십시오",
+  "get_verification_code_again": "재 취득 ${countdownTime}",
+  "send_verification_code": "인증 코드 보내기",
+  "account_new_password": "새 계정 비밀번호",
+  "password_length_error_message": "하나 이상의 비밀번호를 입력하십시오",
+  "confirm_password_label": "새 비밀번호 확인",
+  "register": "가입",
+  "register_success": "성공적으로 등록",
+  "register_email": "등록 된 이메일",
+  "invitation_code": "초대 코드",
+  "please_input_invitation_code": "초대 코드를 입력하십시오",
+  "account_password": "계정 비밀번호",
+  "fundz_password": "자금 보안 비밀번호",
+  "fund_password_format_error_message": "비밀번호 형식이 잘못되었습니다. 최소 자릿수를 입력하십시오",
+  "fund_password_length_error_message": "최소 비밀번호를 입력하십시오",
+  "no_level": "순위 없음",
+  "task": "과제",
+  "my_account_with_unit": "내 계정(USDT)",
+  "my_power_with_unit": "내 해시(T)",
+  "node_mortgage_with_unit": "노드 모기지(USDT)",
+  "get_power": "컴퓨팅 파워 확보",
+  "node_mortgage": "노드 모기지",
+  "task_record": "작업 로그",
+  "invite_share": "공유하도록 초대",
+  "use_guide": "튜토리얼 사용",
+  "dmap_setting": "DMap설정",
+  "thank_you_for_contribute_data": "당신의 기여에 감사드립니다.",
+  "safety_verify": "보안 검증",
+  "fund_password": "자금 비밀번호",
+  "please_input_fund_pwd_hint": "펀드 비밀번호를 입력하십시오",
+  "recharge": "재충전",
+  "fail_get_user_recharge_address_hint": "사용자 재충전 주소를 가져 오지 못했습니다.",
+  "current_exchange_rate": "현재 ${to} 전환율 ${currency} 은",
+  "Tips": "힌트",
+  "no_wallet_hint": "아직 지갑이 없습니다.",
+  "create": "작성",
+  "recharge_success_hint": "충전 성공",
+  "transfer_warning_hint": "비 자산을 위의 주소로 이전하지 마십시오. 그렇지 않으면 자산이 복구되지 않습니다. 전송 한 후 전체 네트워크 노드를 확인해야하며 약-분이 걸립니다.",
+  "task_finish_day_hint": "당일 과제 완료",
+  "task_finish_func": "완료된 작업${total}",
+  "time_f": "시간 :",
+  "load_fail_click_hint": "로드하지 못했습니다. 다시 시도하려면 클릭",
+  "the_horizon_hint": "—— 이것은 수평선입니다 ——",
+  "click_retry_hint": "다시 시도하려면 클릭",
+  "network_exception_hint": "네트워크 이상 ~",
+  "star_number": "성간 수",
+  "direct_star_numbers": "직접 성간",
+  "max_star_numbers": "성간 최대량",
+  "other_star_numbers": "다른 성간 수량",
+  "by_recommend": "추천 ${getParentEmail}",
+  "invite_link_copy_hint": "초대장 링크 복사",
+  "invite_link": "초대 링크",
+  "no_invite_success_hint": "당신은 사람들을 성공적으로 초대하지 않았습니다 ~",
+  "invitate_qr": "초대 QR 코드",
+  "invite_join": "가입하도록 초대",
+  "check_update": "업데이트 확인",
+  "contact_customer_service": "고객 서비스에 문의",
+  "already_latest_version_hint": "이미 최신 버전",
+  "copy_wx_id_success_hint": "위챗 성공 복사",
+  "sweep_qr_hint": "위의 QR 코드 패턴을 스윕하고 WeChat에 나를 추가하십시오.",
+  "node_mortgage_in_out_hint": "노드는 언제든지 모기지로 들어오고 나갑니다.",
+  "node_has_squat_hint": "노드가 쿼트되었습니다",
+  "node_introduction": "노드 소개",
+  "cybersquatting": "사이버 스쿼팅",
+  "stay_func": "남은 ${snapUpStocks}",
+  "income_func": "${incomeCycle}일 출력",
+  "mortgage_product_func": "모기지 제품：${name}",
+  "Insufficient_balance_hint": "담보를위한 잔액 부족",
+  "mortgage_success_hint": "모기지 성공",
+  "tip_node_mortgages_balances_hint": "팁 : 노드 담보는 출력 밸런스에만 사용할 수 있습니다",
+  "snap_up": "사이버 스쿼팅",
+  "snap_up_product_fuc": "사이버 스쿼팅 제품：${name}",
+  "need_transfer": "양도 필요",
+  "snap_up_success_hint": "사이버 스쿼팅 성공",
+  "snap_up_fail": "분대 실패",
+  "confirm_snap_up": "사이버 스쿼팅 확인",
+  "tip_snap_up_balance_hint": "팁 : 사이버 스쿼팅 노드는 담보에 대해서만 재충전 잔액을 사용할 수 있습니다",
+  "map_ai_verificate": "지도AI확인",
+  "turn_on_wifi_hint": "보다WIFI정확한 신호 맵을 위해 스캔을 켭니다",
+  "all_powers_func": "총 컴퓨팅 능력：${totalPower}",
+  "background_scan": "백그라운드 스캔",
+  "max_range_func": "최대 범위 ：${maxMeter} 미터",
+  "wx_id": "Wechat ID：titan654321",
+  "withdrawal": "인출",
+  "balance_with_unit": "계정 잔액(USDT)",
+  "earnings_balance": "수입 잔액",
+  "recharge_balance": "충전 잔액",
+  "bill_flow": "청구서 흐름",
+  "withdrawal_records": "출금 기록",
+  "withdrawal_with_quantity": "인출：${count}",
+  "poundage_with_quantity": "취급 수수료：${poundage}",
+  "max_withdrawal_quantity": "최대 ${maxWithdrawal} USDT",
+  "hyn_withdrawal_coin_address": "HYN인출 주소",
+  "my_wallet_address": "내 지갑 주소",
+  "please_input_hyn_address": "주소를HYN입력하십시오",
+  "no_eth_address": "이더 리움 주소",
+  "quantity": "수량",
+  "please_input_withdrawal_quantity": "인출 금액을 입력하십시오",
+  "withdrawal_fee": "취급 수수료(${fee}%)",
+  "amount_received": "받은 금액",
+  "withdrawal_audit_message": "귀하의 인출 주소에 해당하는 것으로 변환됩니다. 자금의 안전을 보장하기 위해 인출을 수동으로 검토합니다. 출금 처리 시간 : 오전 : 포인트-밤 : 포인트는 당일에 도착하며, 휴무 시간 동안 접수 된 주문은 다음 날에 도착합니다.",
+  "over_max_withdrawal": "최대 인출 한도 초과",
+  "below_min_withdrawal": "최소 인출 금액 미만",
+  "please_input_hyn_withdrawal_address": "인출HYN주소를 입력하십시오",
+  "withdrawal_apply_success": "탈퇴 신청",
+  "withdrawal_fail": "출금 오류",
+  "without_hyn_wallet": "아직 지갑이 없습니다.",
+  "my_total_power": "내 총 컴퓨팅 능력",
+  "effective": "효과적",
+  "finished": "종료",
+  "my_node_mortgage": "내 노드 모기지",
+  "redemption_mortgage": "상환 모기지",
+  "redemption_success": "구속 성공",
+  "redemption_fail": "상환 오류",
+  "mortgage_time": "모기지 시간：${time}",
+  "mortgage_id": "모기지ID：${id}",
+  "personal_information": "개인 정보",
+  "modify_account_password": "계정 비밀번호 변경",
+  "modify_fund_password": "자금 비밀번호 변경",
+  "login_out": "로그 아웃",
+  "reset_fund_password": "자금 비밀번호 재설정",
+  "please_input_account_password": "계정 비밀번호를 입력하십시오",
+  "fund_new_password": "자금에 대한 새로운 비밀번호",
+  "confirm_new_fund_password": "새 펀드 비밀번호 확인",
+  "fund_password_not_equal_confirm_fund_password": "자금 비밀번호는 확인 된 자금 비밀번호와 다릅니다",
+  "re_enter_fund_password": "비밀번호를 다시 입력하십시오",
+  "total_invitation_func": "${totalInvitations}명이 초대했습니다",
+  "grade": "순위",
+  "current_grade": "현재 레벨",
+  "no_grade": "순위 없음",
+  "contribute_reward_func": "기부금 보상： ${award}",
+  "grade_require_func": "레벨 요구 사항： ${require}",
+  "revenue_details": "수익 세부 사항"
 }
