--- a/res/values/strings_zh_CN.arb
+++ b/res/values/strings_zh_CN.arb
@@ -246,5 +246,7 @@
   "private_share": "私密分享",
   "private_share_receive_address": "接收地址:${shortAddress}",
   "navigation": "导航",
-  "my_location": "我的位置"
+  "my_location": "我的位置",
+  "setting": "设置",
+  "language": "语言"
 }
